# Ai_Support

./: .env.example  .gitignore  README.md  ai_support.db  pyproject.toml
docs/: PLAN_POC.md  tips.py
scripts/: backfill_jira_history.py  rebuild_style_profiles.py
src/ai_support_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/app/: main.py
src/app/api/: routes_analyze.py  routes_demo_ui.py  routes_sync.py
src/app/core/: config.py  errors.py
src/app/db/: models.py  session.py
src/app/demo/: scenarios.py
src/app/jira/: client.py  parser.py
src/app/llm/: client.py  prompts.py
src/app/retrieval/: ranker.py
src/app/services/: agent_profiles.py  analyze_ticket.py  demo_report.py  suggestion_publisher.py
src/app/storage/: tickets.py
src/app/style/: profile_builder.py
src/app/templates/: demo_home.html  profiles.html
src/app/workers/: analyze_recent.py  scheduler.py  sync_recent.py
