[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-support-poc"
version = "0.1.0"
description = "POC interne d'analyse et de suggestion pour tickets Jira TheHive"
requires-python = ">=3.11"
dependencies = [
  "apscheduler==3.10.4",
  "fastapi==0.115.12",
  "jinja2==3.1.6",
  "pydantic-settings==2.8.1",
  "psycopg[binary]==3.2.6",
  "requests==2.32.3",
  "sqlalchemy==2.0.39",
  "uvicorn[standard]==0.34.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
